- Threshold logic - Mailer service logic - Configured and tested with MailHog

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@
 APP_ENV=dev
 APP_SECRET=c4ba4f0f16c7520ba404bae43ae2ef2c
 ###< symfony/framework-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://localhost:1025
+
+USD_THRESHOLD=36.21
+EUR_THRESHOLD=40.12
